fixed double up on css sheet for random and benefits index page headings that was throwing alignment

--- a/app/assets/stylesheets/benefits.scss
+++ b/app/assets/stylesheets/benefits.scss
@@ -15,7 +15,7 @@
   color: #333229;
   margin-top: 21px;
   margin-bottom: 40px;
-  margin-left: 430px;
+  margin-left: 432px;
 }
 
 .benefitsubheading {
