--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -156,7 +156,7 @@ html {
 
 ///////////////////////////////RANDOM PAGE STYLING/////////////////////////////
 
-.benefitpageheading {
+.randompageheading {
   font-family: 'Rubik', sans-serif;
   font-size: 29px;
   max-width: 741px;
